--- a/front-end/src/App.scss
+++ b/front-end/src/App.scss
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 body {
   text-align: center;
-  background-color: #070A52;
+  background-color: #0B2447;
+  font-family: 'Roboto', sans-serif;
 }
 
 .title {
@@ -12,6 +15,9 @@ body {
 
 .map {
   svg {
-      border-radius: 8px;
+      border-radius: 18px;
+  }
+  .tag {
+    background-color: #0B2447;
   }
 }
